--- a/portfolio/buatindex.css
+++ b/portfolio/buatindex.css
@@ -38,6 +38,13 @@ th.kanan{
 	text-align: center;
 	border-style : dotted;
 }
+.nama {
+	font-family: Ravie;
+	font-size: 200%;
+	margin-top: 3%;
+	text-align: center;
+	border-style : dotted;
+}
 .profil {
 	border-radius: 190px;
 	height: 370px;
