--- a/portfolio/buatindex.css
+++ b/portfolio/buatindex.css
@@ -38,13 +38,6 @@ th.kanan{
 	text-align: center;
 	border-style : dotted;
 }
-.nama {
-	font-family: Ravie;
-	font-size: 200%;
-	margin-top: 3%;
-	text-align: center;
-	border-style : dotted;
-}
 .profil {
 	border-radius: 190px;
 	height: 370px;
@@ -53,7 +46,7 @@ th.kanan{
 	float: left;
 }
 img {
-	widthh : 0.5%;
+	width : 0.5%;
 }
 footer{
 	bottom: 0;
